change link color, prevent about overflow

--- a/src/_styles/_variables.scss
+++ b/src/_styles/_variables.scss
@@ -1,6 +1,7 @@
 :root {
     --dark: #1f1f1f;
     --primary: rgb(216, 162, 62);
+    --secondary: rgb(173, 129, 46);
     --text-primary: white;
     --text-secondary: #dadada;
     --disabled: rgb(100,100,100);
