--- a/src/_styles/elements/_about.scss
+++ b/src/_styles/elements/_about.scss
@@ -2,7 +2,7 @@ div.about {
     display: flex;
     flex-direction: column;
     
-    width: clamp(50%, 400px, 100%);
+    width: clamp(50%, 400px, 90%);
     min-height: 100%;
     margin: 0 auto;
     
