--- a/src/_styles/elements/_projects.scss
+++ b/src/_styles/elements/_projects.scss
@@ -46,8 +46,8 @@
 
                 .links {
                     .link {
-                        background-color: var(--dark);
-                        color: var(--text-secondary);
+                        background-color: var(--secondary);
+                        color: var(--text-primary);
 
                         text-decoration: none;
 
